Fleshing out copy for 23 Jan 2022

--- a/newsletter/2022-01-23.md
+++ b/newsletter/2022-01-23.md
@@ -1,83 +1,31 @@
-#Web3Weekly
+# #Web3Weekly
 
 ## Jan. 16-22, 2022
 
-**Yes, swooning token prices have** wiped out [$1 trillion in market value](https://www.bloomberg.com/news/articles/2022-01-21/crypto-meltdown-erases-more-than-1-trillion-in-market-value) since November. But venture investment in decentralization and hiring are still going bonkers.
+**According to a new analysis by LinkedIn**, crypto-related job postings on their network [jumped 395% in 2021](https://www.linkedin.com/posts/linkedin-news_theworkshift-economy-labormarket-activity-6887062336839016450-67iT/) versus a "mere" 98% for the tech industry as a whole.
 
+Speaking of which...
 
+At [Capsule Social](https://capsule.social), we just added a new opening for a platform support engineer. We're also [looking for engineers](https://capsule.join.com) to work on payments and quality assurance for our upcoming public beta launch.
 
+If you're passionate about Web3 and decentralization, one of these positions could be perfect for you. Please take a look, or pass along [the openings](https://capsule.join.com) to someone you know who might be interested.
 
-<!--
+On to the latest headlines:
 
- Crypto job ads are surging  https://www.theblockcrypto.com/linked/130434/crypto-job-ads-surged-by-nearly-400-in-2021-says-linkedin
+- **The Bitcoin Mining Council** estimates that about 58.5% of the industry's electricity consumption [came from sustainable sources](https://bitcoinminingcouncil.com/q4-bitcoin-mining-council-survey-confirms-sustainable-power-mix-and-technological-efficiency/) in the fourth quarter, based on a survey of about half the global Bitcoin network. Meanwhile, Intel is planning to [introduce a low-voltage chip](https://decrypt.co/90643/intel-energy-efficient-bitcoin-mining-chip) for bitcoin miners.
 
-https://www.linkedin.com/posts/linkedin-news_theworkshift-economy-labormarket-activity-6887062336839016450-67iT/
+- **Time to update the scorecard in NFT trading.** Coinbase announced a new [partnership with Mastercard](https://blog.coinbase.com/coinbase-and-mastercard-partner-to-revolutionize-nft-purchase-experience-8e486a392c55) to enable sales of non-fungible tokens using conventional payment cards. OpenSea [acquired Dharma Labs](https://opensea.io/blog/announcements/opensea-acquires-dharma-labs-welcomes-new-cto/) and named its co-founder their new chief technology officer. The company is the leading platform for trading NFTs, with $3.5 billion in Ethereum volume so far in January, according to data from [Dune Analytics](https://dune.xyz/rchen8/opensea). Separately, all-time NFT sales on the Solana chain(https://www.theblockcrypto.com/linked/130874/solana-nft-total-sales-volume-crosses-1-billion) surpassed $1 billion for the first time. And the individual companies exploring new NFT projets include [Walmart](https://www.cnbc.com/2022/01/16/walmart-is-quietly-preparing-to-enter-the-metaverse.html), [Hulu](https://www.coindesk.com/business/2022/01/15/hulu-targets-streamers-of-tomorrow-as-it-seeks-candidates-with-metaverse-nft-backgrounds/), [Crocs](https://www.coindesk.com/business/2022/01/14/crocs-is-chomping-into-nfts-trademark-filings-show/), [Gucci](https://www.ledgerinsights.com/gucci-to-launch-nft-collection-with-superplastic-brand/), [Prada and Adidas](https://www.coindesk.com/business/2022/01/20/prada-adidas-launch-nft-project-on-polygon/).
 
-Plug Capsule openings. New support: https://capsule.join.com/jobs/3736861-platform-support-engineer
-
- -->
-
-The latest decentralization headlines:
-
-- <!-- Report on BTC mining and renewable energy. https://bitcoinminingcouncil.com/q4-bitcoin-mining-council-survey-confirms-sustainable-power-mix-and-technological-efficiency/
-
-Intel is introducing a low-voltage chip for bitcoin miners. https://decrypt.co/90643/intel-energy-efficient-bitcoin-mining-chip
-
-Block adopting Lightning Network: https://techcrunch.com/2022/01/18/blocks-cash-app-adopts-lightning-network-for-free-bitcoin-payments/
-
--->
-
-- <!-- USDC surpassing Tether https://www.theblockcrypto.com/post/130342/usdc-supply-on-ethereum-surpasses-usdt-first-time --> ()
+- **Supply of the USDC stablecoin on the Ethereum network** is nearing $40 billion and just surpassed that of rival Tether for the first time, according to [The Block](https://www.theblockcrypto.com/post/130342/usdc-supply-on-ethereum-surpasses-usdt-first-time). However, Tether still maintains a big advantage in market cap and trading volume across all chains.
 
 - **Andreessen Horowitz** is raising $4.5 billion for new crypto investments, the Financial Times [reports](https://www.ft.com/content/6bf0ed56-1de5-4750-877f-c9cff753935c). 👀
 
-- **It was busy week in Washington.** <!-- Big congressional crypto hearing
-
- The SEC rejected a bitcoin ETF. https://www.theblockcrypto.com/linked/131008/sec-rejects-proposed-spot-bitcoin-etf-from-first-trust-and-skybridge
-
- The Fed issued a long-awaited report on stablecoins. https://www.federalreserve.gov/publications/files/money-and-payments-20220120.pdf
-
--->
-
 - **Users of the Twitter Blue subscription service** can now [use non-fungible tokens](https://twitter.com/TwitterBlue/status/1484226494708662273?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1484226494708662273%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Ftechcrunch.com%2F2022%2F01%2F20%2Ftwitter-blue-subscription-users-are-first-gain-access-to-a-new-nft-profile-picture-feature%2F)as profile pictures. The experimental feature is available only on iOS for now, but will presumably roll out to Android and the web eventually as well.
 
-- <!-- Coinbase partnered with Mastercard to enable NFT sales for fiat. https://blog.coinbase.com/coinbase-and-mastercard-partner-to-revolutionize-nft-purchase-experience-8e486a392c55
+- **Algos just don't understand.**<!-- YouTube invites to video funerals. https://twitter.com/afrobella/status/1483837893789507587-->
 
-OpenSea acquired Dharma Labs and named its co-founder their new chief technology officer.
-https://opensea.io/blog/announcements/opensea-acquires-dharma-labs-welcomes-new-cto/ | The marketplace also did 3.5 billion in monthly volume. https://decrypt.co/90519/nft-platform-opensea-hits-record-3-5b-monthly-ethereum-volume
+***That’s it for now. As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.
 
-Non-fungible token (NFT) sales on the Solana blockchain surpassed $1 billion in all-time total volume this month for the first time, according to the NFT sales tracker CryptoSlam!
+Thanks for spending some time with #Web3Weekly today! Best wishes for a healthy and productive week ahead.
 
-https://www.theblockcrypto.com/linked/130874/solana-nft-total-sales-volume-crosses-1-billion
-
-Hulu https://www.coindesk.com/business/2022/01/15/hulu-targets-streamers-of-tomorrow-as-it-seeks-candidates-with-metaverse-nft-backgrounds/
-
-Crocs: https://www.coindesk.com/business/2022/01/14/crocs-is-chomping-into-nfts-trademark-filings-show/
-
-WMT: https://www.cnbc.com/2022/01/16/walmart-is-quietly-preparing-to-enter-the-metaverse.html
-
-  Prada and Adidas launch NFTs  (https://www.coindesk.com/business/2022/01/20/prada-adidas-launch-nft-project-on-polygon/
-
-  New Gucci NFT https://www.ledgerinsights.com/gucci-to-launch-nft-collection-with-superplastic-brand/
-
--->
-
-- <!-- YouTube invites to video funerals. https://twitter.com/afrobella/status/1483837893789507587-->
-
-
-<!--
-
-
-- Multichain was hacked, costing users $1.9 million in tokens. https://thedefiant.io/multichain-exploit/
-
-- Crypto.com users lost 33 million in a hack. https://www.theblockcrypto.com/post/130857/crypto-com-ceo-confirms-400-accounts-were-compromised-in-recent-hack | https://www.coindesk.com/business/2022/01/17/cryptocom-suspends-withdrawals-following-unauthorized-activity/
-
-
-- NYC's new mayor got his first paycheck in BTC and ETH. https://www.theblockcrypto.com/linked/131020/nyc-mayor-eric-adams-receives-first-paycheck-in-the-form-of-btc-and-eth
-
-- Grayscale is partnering with Bloomberg to launch a new Future of finance index. https://www.theblockcrypto.com/linked/130811/grayscale-taps-bloomberg-for-future-of-finance-index-launch-amid-etf-push
-
-
-
-
--->
+— Peter A. McKay***
