Final copy for 23 Jan 2022

--- a/newsletter/2022-01-23.md
+++ b/newsletter/2022-01-23.md
@@ -2,7 +2,7 @@
 
 ## Jan. 16-22, 2022
 
-**According to a new analysis by LinkedIn**, crypto-related job postings on their network [jumped 395% in 2021](https://www.linkedin.com/posts/linkedin-news_theworkshift-economy-labormarket-activity-6887062336839016450-67iT/) versus a "mere" 98% for the tech industry as a whole.
+**According to a new analysis by LinkedIn**, crypto-related job postings on their network [jumped 395% in 2021](https://www.linkedin.com/posts/linkedin-news_theworkshift-economy-labormarket-activity-6887062336839016450-67iT/) versus a "mere" 98% increase for the tech industry as a whole.
 
 Speaking of which...
 
@@ -22,10 +22,10 @@ On to the latest headlines:
 
 - **Users of the Twitter Blue subscription service** can now [use non-fungible tokens](https://twitter.com/TwitterBlue/status/1484226494708662273?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1484226494708662273%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Ftechcrunch.com%2F2022%2F01%2F20%2Ftwitter-blue-subscription-users-are-first-gain-access-to-a-new-nft-profile-picture-feature%2F)as profile pictures. The experimental feature is available only on iOS for now, but will presumably roll out to Android and the web eventually as well.
 
-- **Algos just don't understand.**<!-- YouTube invites to video funerals. https://twitter.com/afrobella/status/1483837893789507587-->
+- **Algos just don't understand.** Freelance writer [@afrobella](https://twitter.com/afrobella) tweeted Wednesday about a [darkly hilarious bug](https://twitter.com/afrobella/status/1483837893789507587) she encountered with the YouTube algorithm. Seems that after she attended a funeral via video streaming, the service started suggesting other funerals she might want to watch. #facepalm 🤦‍♂️
 
-***That’s it for now. As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.
+<strong></em>That’s it for now. As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.
 
 Thanks for spending some time with #Web3Weekly today! Best wishes for a healthy and productive week ahead.
 
-— Peter A. McKay***
+— Peter A. McKay</em><strong>
