Minor typography fix

--- a/newsletter/2022-01-23.md
+++ b/newsletter/2022-01-23.md
@@ -24,7 +24,7 @@ On to the latest headlines:
 
 - **Algos just don't understand.** Freelance writer [@afrobella](https://twitter.com/afrobella) tweeted Wednesday about a [darkly hilarious bug](https://twitter.com/afrobella/status/1483837893789507587) she encountered with the YouTube algorithm. Seems that after she attended a funeral via video streaming, the service started suggesting other funerals she might want to watch. #facepalm 🤦‍♂️
 
-<strong></em>That’s it for now. As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.
+<strong><em>That’s it for now. As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.
 
 Thanks for spending some time with #Web3Weekly today! Best wishes for a healthy and productive week ahead.
 
