Final  copy for 6 Feb 2022

--- a/newsletter/2022-02-06.md
+++ b/newsletter/2022-02-06.md
@@ -2,20 +2,46 @@
 
 ## Jan. 30 to Feb. 5, 2022
 
-<!-- Some potential things to riff on...
+**Facebook's parent company Meta had such an awful week** that you might've missed its exit from the stablecoin business with a whimper. More on that in a moment, as it deserves some attention from anyone who cares about decentralization.
 
-- How we fixed the ozone layer: Vox video that's indirectly a cautionary tale about social media
+But first we have to acknowledge the social giant's [shaky earnings report](https://s21.q4cdn.com/399680738/files/doc_financials/2021/q4/FB-12.31.2021-Exhibit-99.1-Final.pdf) Wednesday evening, which dominated mainstream press attention for understandable reasons. Meta's quarterly profits were below Wall Street's expectations, its daily active users (DAU) declined for the first time on record, and it forecast rough going throughout 2022.
 
--  Joe Rogan and Neil Young and everyone else
+In particular, Meta said recent changes to Apple's privacy options on its iDevices, which allow users to more easily opt out of the sort of tracking that makes Facebook ads valuable, could cost Meta up to $10 billion in revenue this year.
 
--->
+That news caused Meta shares on Thursday to suffer their worst [one-day plunge ever](https://www.cnbc.com/2022/02/03/facebook-shares-plummet-22percent-after-reporting-weak-guidance.html), wiping out $230 billion of the company's valuation.
 
-The latest headlines:
+Investors are now questioning whether Meta's entire business model is in jeopardy. In a worst-case scenario, described deftly by Bloomberg reporter Sarah Frier [here](https://twitter.com/sarahfrier/status/1489275120094826496), the network effect that famously helped Facebook grow so large may now be reversed and working *against* it.
 
-- **TK** []()
-- **TK** []()
-- **TK** []()
-- **TK** []()
+That is to say, as daily active users leave the platform, it becomes a little less useful to the people left behind. They then have increased incentive to leave themselves, and on and on.
+
+Which brings us to Diem, the Meta-led stablecoin project formerly known as Libra. It's one part of the Meta empire that never had *any* kind of network effect, positive or negative, because it never had a public launch.
+
+You may remember that when Facebook announced the project in 2019, it created a furor among regulators around the world who didn't want the tech giant encroaching into finance. That scrutiny, plus a heap of bad PR because of Diem's association with Facebook, definitely took its toll over time.
+
+On Monday, the Diem Association [announced](https://www.prnewswire.com/news-releases/statement-by-diem-ceo-stuart-levey-on-the-sale-of-the-diem-groups-assets-to-silvergate-301471997.html) that it was selling its assets to Silvergate Capital and would wind down in the months ahead. Strikingly, the association said it ultimately concluded from its conversations with federal regulators in the U.S. in particular that "the project could not move ahead."
+
+Wow.
+
+Weirdly, I find myself compelled to offer a certain left-handed defense of Meta here: At least they tried with Diem. By contrast, it's been striking to me how inactive most of Meta's Big Tech peers have been in blockchain and web3 otherwise.
+
+Yes, all their CEOs have talked publicly about the promise of blockchain. Some have even made moves around the edges, such as allowing crypto apps into their app stores and so forth. But we haven't seen any of the real heavyweights -- the American public companies with trillion-dollar valuations -- jump in with both feet to launch a new blockchain product or even a major feature.
+
+For instance, you still can't buy things at an Apple store or on Amazon with your crypto. Google hasn't set aside even a small portion of its vast [server farms](https://www.google.com/about/datacenters/locations/) to create a new mining business. Netflix isn't using a blockchain to manage intellectual property rights. None of these companies are serving their websites on Ethereum or making mining hardware or wallets for [cold storage](https://www.investopedia.com/terms/c/cold-storage.asp). And on and on.
+
+If anything, Diem was an exception that proved this rule. With its demise, maybe the giants will be even more reticent to get involved now. Which should be great for the rest of us, in my opinion, as it makes room for new products from new entrants.
+
+On to the week's other notable headlines:
+
+- **Crypto markets rallied.** Token prices took a break from a [dismal run](https://www.coindesk.com/markets/2022/01/31/stablecoins-won-crypto-markets-in-january-with-0-returns/) that started back in November, sparking traders' hopes that a more sustained bull market might be shaping up. Global market valuation rose 9% on the week to $1.9 trillion, helped by big gains in ether (up 14%) and bitcoin (up 9%), according to data from [CoinMarketCap](https://coinmarketcap.com/charts/).
+
+- **Polkadot had the lowest carbon footprint** of six proof-of-stake blockchains examined in a recent study by the Crypto Carbon Ratings Institute. The full report is available for download [here](https://www.carbon-ratings.com/dl/pos-report-2022).
+
+- **Galaxy Digital said** 80% of the power consumed by its crypto mining operations now [comes from sustainable sources](https://decrypt.co/91931/galaxy-sustainability).
+
+- **Crypto donations to charity jumped** sixteenfold in 2021 on The Giving Block, a popular platform that helps causes collect donations. Total giving topped $69 million, with ether as the most donated token, followed by bitcoin and USDC, according to Giving Block's [annual report](https://thegivingblock.com/annual-report/).
+
+- **One-third of of Americans said** they would be more likely to [go on a date](https://www.cnbc.com/2022/02/03/owning-crypto-may-make-you-more-desirable-on-the-dating-scene-study-finds.html) with someone who mentioned cryptoassets in their online dating profile, according to a new survey by eToro. Awwww...
+
 
 __*That’s it for now. As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.*__
 
