minor wording tweaks here

--- a/newsletter/2022-02-06.md
+++ b/newsletter/2022-02-06.md
@@ -4,25 +4,25 @@
 
 **Facebook's parent company Meta had such an awful week** that you might've missed its exit from the stablecoin business with a whimper. More on that in a moment, as it deserves some attention from anyone who cares about decentralization.
 
-But first we have to acknowledge the social giant's [shaky earnings report](https://s21.q4cdn.com/399680738/files/doc_financials/2021/q4/FB-12.31.2021-Exhibit-99.1-Final.pdf) Wednesday evening, which dominated mainstream press attention for understandable reasons. Meta's quarterly profits were below Wall Street's expectations, its daily active users (DAU) declined for the first time on record, and it forecast rough going throughout 2022.
+First, we have to acknowledge the social giant's [shaky earnings report](https://s21.q4cdn.com/399680738/files/doc_financials/2021/q4/FB-12.31.2021-Exhibit-99.1-Final.pdf) Wednesday evening, which dominated mainstream press attention, for understandable reasons. Meta's quarterly profits were below Wall Street's expectations, its daily active users (DAU) declined for the first time on record, and it forecast rough going throughout 2022.
 
-In particular, Meta said recent changes to Apple's privacy options on its iDevices, which allow users to more easily opt out of the sort of tracking that makes Facebook ads valuable, could cost Meta up to $10 billion in revenue this year.
+In particular, Meta said recent changes to Apple's privacy options on its iDevices, which allow users to more easily opt out of the tracking that makes Facebook ads valuable, could cost Meta up to $10 billion in revenue this year.
 
 That news caused Meta shares on Thursday to suffer their worst [one-day plunge ever](https://www.cnbc.com/2022/02/03/facebook-shares-plummet-22percent-after-reporting-weak-guidance.html), wiping out $230 billion of the company's valuation.
 
 Investors are now questioning whether Meta's entire business model is in jeopardy. In a worst-case scenario, described deftly by Bloomberg reporter Sarah Frier [here](https://twitter.com/sarahfrier/status/1489275120094826496), the network effect that famously helped Facebook grow so large may now be reversed and working *against* it.
 
-That is to say, as daily active users leave the platform, it becomes a little less useful to the people left behind. They then have increased incentive to leave themselves, and on and on.
+That is to say, as daily active users leave the platform, it becomes a little less useful to the people left behind. Those people then have increased incentive to leave as well, and on and on.
 
 Which brings us to Diem, the Meta-led stablecoin project formerly known as Libra. It's one part of the Meta empire that never had *any* kind of network effect, positive or negative, because it never had a public launch.
 
 You may remember that when Facebook announced the project in 2019, it created a furor among regulators around the world who didn't want the tech giant encroaching into finance. That scrutiny, plus a heap of bad PR because of Diem's association with Facebook, definitely took its toll over time.
 
-On Monday, the Diem Association [announced](https://www.prnewswire.com/news-releases/statement-by-diem-ceo-stuart-levey-on-the-sale-of-the-diem-groups-assets-to-silvergate-301471997.html) that it was selling its assets to Silvergate Capital and would wind down in the months ahead. Strikingly, the association said it ultimately concluded from its conversations with federal regulators in the U.S. in particular that "the project could not move ahead."
+On Monday, the Diem Association [announced](https://www.prnewswire.com/news-releases/statement-by-diem-ceo-stuart-levey-on-the-sale-of-the-diem-groups-assets-to-silvergate-301471997.html) that it was selling its assets to Silvergate Capital and would wind down in the months ahead. Strikingly, the association said it ultimately concluded from its conversations with federal regulators in the U.S. that "the project could not move ahead."
 
 Wow.
 
-Weirdly, I find myself compelled to offer a certain left-handed defense of Meta here: At least they tried with Diem. By contrast, it's been striking to me how inactive most of Meta's Big Tech peers have been in blockchain and web3 otherwise.
+Weirdly, I find myself compelled to offer a certain left-handed defense of Meta here: At least they tried with Diem. By contrast, it's been puzzling me how inactive most of Meta's Big Tech peers have been in blockchain and web3 otherwise.
 
 Yes, all their CEOs have talked publicly about the promise of blockchain. Some have even made moves around the edges, such as allowing crypto apps into their app stores and so forth. But we haven't seen any of the real heavyweights -- the American public companies with trillion-dollar valuations -- jump in with both feet to launch a new blockchain product or even a major feature.
 
@@ -30,7 +30,7 @@ For instance, you still can't buy things at an Apple store or on Amazon with you
 
 If anything, Diem was an exception that proved this rule. With its demise, maybe the giants will be even more reticent to get involved now. Which should be great for the rest of us, in my opinion, as it makes room for new products from new entrants.
 
-On to the week's other notable headlines:
+On to some other recent headlines of note:
 
 - **Crypto markets rallied.** Token prices took a break from a [dismal run](https://www.coindesk.com/markets/2022/01/31/stablecoins-won-crypto-markets-in-january-with-0-returns/) that started back in November, sparking traders' hopes that a more sustained bull market might be shaping up. Global market valuation rose 9% on the week to $1.9 trillion, helped by big gains in ether (up 14%) and bitcoin (up 9%), according to data from [CoinMarketCap](https://coinmarketcap.com/charts/).
 
