--- a/newsletter/2022-02-13.md
+++ b/newsletter/2022-02-13.md
@@ -16,8 +16,7 @@ The week's other notable headlines:
 
 - **The trading app Robinhood** is planning a global expansion in which it will go ["crypto first,"](https://decrypt.co/92616/robinhood-plans-be-crypto-first-global-expansion-push) according to Decrypt.
 
-- **LooksRare, a new marketplace for non-fungible tokens,** racked up more revenue from network fees than NFT leader OpenSea in the 30-day period through Feb. 7, according to [The Defiant](https://thedefiant.io/looksrare-opensea-protocol-revenue/).
-
+- **LooksRare, a new marketplace for non-fungible tokens,** racked up more revenue from network fees than NFT leader OpenSea in the 30-day period through Feb. 7, according to [The Defiant](https://thedefiant.io/looksrare-opensea-protocol-revenue/). The stats suggest that LooksRare's trading volume may be vying for the industry's top spot as well.
 
 - **OnlyFans said** said it will [enable NFT profile pictures]https://www.reuters.com/technology/onlyfans-jumps-into-nft-profile-pictures-2022-02-10/) for users. Separately, YouTube's chief product officer published a [blog post](https://blog.youtube/inside-youtube/innovations-for-2022-at-youtube/) detailing video service's plans for 2022, including new web3 features.
 
