Final copy for 20 March 2022

--- a/newsletter/2022-03-20.md
+++ b/newsletter/2022-03-20.md
@@ -1,37 +1,29 @@
-# Web3Weekly
+# #Web3Weekly
 ## March 13-19, 2022
 
-How mainstream is web3 becoming? Put it this way: Tom Brady just tweeted a fan letter to Vitalik Buterin, who apparently wasn't previously aware of who Tom Brady is.
+**How mainstream is web3 becoming?** Put it this way: Tom Brady just [tweeted](https://twitter.com/TomBrady/status/1505295283286167554) a fan letter to Vitalik Buterin, who apparently wasn't previously aware of who Tom Brady is.
 
 Some context that really puts the latest headlines in perspective, I think...
 
-Blogchain highlights
-The Capsule team announced a bunch of cool stuff for the platform and its community:
+## Blogchain highlights
 
-tk
-tk
-((sweep tweets))
+The Capsule team announced a bunch of cool stuff to push the platform forward and help newcomers:
 
-((sweep email))
+- **We published a three-part series of posts** covering decentralization basics for writers. It answers three frequently asked questions: What is [blockchain](http://lnkd.in/e-Sd8XHt)? What is [cryptocurrency](http://lnkd.in/eE8mDiCY)? And what is [web3](http://lnkd.in/et4jSiqH)?
+- **The engineering team** released the first major [feature updates](https://blogchain.app/post/bafyreihwq5ixt2xdubvigh2okqcfqzkdixgfjl64s5d6jjzz7yhal3ry4e) to the platform, including improvements in social sharing, content discoverability, and more.
+- **We're looking for a new front-end engineer** to help improve Blogchain's text editor and better support writers' creativity. Full details [here](https://join.com/companies/capsule/4160778-frontend-engineer).
+- **Capsule CEO Nadim Kobeissi** was [interviewed on France 24](https://www.youtube.com/watch?v=UHT4GdVOEdA) about the recent hack of Solana, decentralized finance in general, and web3. Of course, he got in a plug for the home team in the process as well. 😉
 
-Pocaster Laura Shin is monetizing her new book about TKTKTKTKT in part through sales of non-fungible tokens on OpeanSea. ((From Shin: "Each NFT is available on OpenSea for .02 ETH (~$50) on Polygon and will give you access to the Discord, as well as the premium content, for one year."))
+## News from elsewhere
+- **ConsenSys raised $450 million** at a $7 billion valuation, up 100% since November. The firm has been boosted in part by the popularity of its web-based wallet MetaMask, which now has more than 30 million monthly active users, CoinDesk [reports](https://www.coindesk.com/business/2022/03/15/450m-raise-values-ethereum-builder-consensys-at-7b-as-metamask-tops-30m-users/).
+- **Ethereum deployed** its proof-of-stake software [on the Kiln test network](https://www.coindesk.com/tech/2022/03/16/ethereum-merge-takes-place-on-kiln-testnet/), an important milestone toward a full public release.
+- **The decentralized finance platform Aave** will launch its V3 upgrade across six different networks, according to [The Block](https://www.theblockcrypto.com/linked/138018/aave-set-to-launch-third-version-of-its-defi-protocol-across-six-networks).
+- **Conventional platforms are considering fresh moves into web3.** Non-fungible tokens may be [on their way to Intagram](https://www.coindesk.com/business/2022/03/15/mark-zuckerberg-says-nfts-are-coming-soon-to-instagram/), and Spotify is [hiring](https://decrypt.co/95293/new-job-openings-spotify-indicate-web3-technology) for new decentraliztion jobs.
+- **Ukraine's President Volodymyr Zelenskyy** signed a bill [legalizing cryptocurrency](https://www.coindesk.com/policy/2022/03/16/ukraines-zelensky-signs-virtual-assets-bill-into-law-legalizing-crypto/), a source of millions of dollars in donations from overseas since Russia invaded the country.
+- **Canada's central bank** partnered with the Massachusetts Institute of Technology to [research the feasibility](https://www.theblockcrypto.com/linked/138067/canadas-central-bank-and-mit-to-collaborate-on-cbdc-research) of issuing an official digital currency.
 
-https://www.coindesk.com/policy/2022/03/16/ukraines-zelensky-signs-virtual-assets-bill-into-law-legalizing-crypto/
+_**That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe here.**_
 
-TK
+_**As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.**_
 
-TK
-tk
-News from elsewhere
-((sweep tweets))
-((sweep email))
-TK
-TK
-TK
-TK
-That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe here.
-
-As ever, a quick disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please DYOR and consult appropriate financial pros to make the most suitable choices for your needs.
-
-Best wishes for a healthy and productive week ahead.
-
+_**Best wishes for a healthy and productive week ahead.**_
