adding italic to blockquote markdown

--- a/newsletter/2022-03-27.md
+++ b/newsletter/2022-03-27.md
@@ -11,8 +11,8 @@ Screenwriter [@sazonova]() has been particularly active, recounting her [tearful
 
 Like many of our new Ukrainian users, she wrote in her initial post of how radically and instantly her life changed on Feb. 24 when Russia invaded:
 
->Block quote goes here*<!-- 20graf quote -->*
->Testing the blockquote markdown.
+>*Block quote goes here*
+>*Testing the blockquote markdown*
 
 <!--
 
