Final copy for 10 April 2022

--- a/newsletter/2022-04-10.md
+++ b/newsletter/2022-04-10.md
@@ -3,8 +3,10 @@
 ## Heading Home
 ### April 3-9, 2022
 
-**I'm wrapping up** my [trip to Amsterdam](https://blogchain.app/p/talking-decentralization-in-the-netherlands/8fEkzseLYt) for the latest [all-hands meeting](https://twitter.com/peteramckay/status/1511590910181658625) of the Capsule Social [team](https://twitter.com/CapsuleSoc/status/1512051647287107589). We got a lot of [important work](https://twitter.com/CapsuleSoc/status/1512059339166560265) done, queued up some [important things to come](https://twitter.com/kaepora/status/1511655645220646919) for the Blogchain platform over the next few months, and even got to enjoy this lovely city a little.
+**I'm wrapping up** my [trip to Amsterdam](https://blogchain.app/p/talking-decentralization-in-the-netherlands/8fEkzseLYt) for the latest [all-hands meeting](https://twitter.com/peteramckay/status/1511590910181658625) of the Capsule Social [team](https://twitter.com/CapsuleSoc/status/1512051647287107589). I'm happy to say we got a lot of [important work](https://twitter.com/CapsuleSoc/status/1512059339166560265) done, queued up some [important things to come](https://twitter.com/kaepora/status/1511655645220646919) for the Blogchain platform over the next few months, and even got to enjoy this lovely city a little.
+
 A personal favorite: The [Rijksmuseum](https://www.rijksmuseum.nl/en), especially their Rembrandt collection. If you're ever in Amsterdam, please don't miss it.
+
 Now, on to some decentralization headlines:
 
 ### Blogchain Highlights
@@ -13,7 +15,6 @@ Now, on to some decentralization headlines:
 - **The amazing @Sazonova, a screenwriter who fled the war in Ukraine,** continues to be one of the most active users of Blogchain posting firsthand experiences of that conflict. In her [latest post](https://blogchain.app/p/my-new-reality/pphFuOMl1R), she talks frankly about dealing with the daily anxiety of being displaced and trying to maintain a semblance of normalcy, with extremely mixed success.
 - **Capsule is hiring** a new [content writer](https://join.com/companies/capsule/4279595-content-writer) to work with yours truly. Please apply or pass along to someone you know who might be interested!
 - **The NEAR Protocol,** an important component of Blogchain's technical architecture, [raised $350 million](https://decrypt.co/97018/ethereum-rival-near-protocol-raises-350-million-new-funding) in venture funding. Congrats!
-
 ### News From Elsewhere
 - **Elon Musk** is now [Twitter's largest shareholder](https://edition.cnn.com/2022/04/04/investing/elon-musk-twitter-shares-stake/index.html), with a 9.2% stake. The announcement immediately spurred speculation that the billionaire will push to [undo moderation policies](https://www.theguardian.com/technology/2022/apr/10/elon-musk-unveils-vision-for-twitter-after-joining-its-board) that some users believe harm free speech on the social platform.
 - **More than $7 billion in value** is now locked on decentralized finance networks built atop Ethereum, The Defiant [reports](https://thedefiant.io/ethereum-the-merge-layer-2s-surging/).
