Final copy for 17 April 2022

--- a/newsletter/2022-04-17.md
+++ b/newsletter/2022-04-17.md
@@ -5,18 +5,21 @@
 *Photo by Szabo Viktor via Unsplash*
 
 **Yesterday morning, I happily discovered** the Coachella Music Festival [streaming on YouTube](https://www.youtube.com/coachella). Specifically, a replay of Carly Rae Jepson's performance Friday evening was on at the time.
+
 Honestly, I don't particularly like or dislike Jepson's music. But the possibilities this opened up for this weekend and next!
+
 Less happily, my reaction then ran through several other phases:
 1. *"Wow. Guess this is another live event adjusting to our post-COVID world."*
 2. Out of curiosity, search for articles about Coachella's decision to livestream.
 3. Learn that Coachella has [been livestreamed on YouTube for 10 years](https://variety.com/2022/music/news/coachella-livestream-youtube-watch-online-1235233209/).
 4. *"F#%@. I'm just old and/or uncool."*
+
 Let's just get on to some headlines about decentralization, shall we?
 
 ### Blogchain Highlights
-- **The Narratives Project** explained the mechanics and possible implications of Elon Musk's controversial [bid to buy Twitter](https://blogchain.app/p/elon-musk-s-bid-for-twitter-the-future-of-the-platform/XlQ3Zw3EXc) in a rational, layman-friendly way. Nice!
+- **The Narratives Project** explained the mechanics and possible implications of Elon Musk's controversial [bid to buy Twitter](https://blogchain.app/p/elon-musk-s-bid-for-twitter-the-future-of-the-platform/XlQ3Zw3EXc) in a rational, layman-friendly way. Good to see *someone* attempting this. 
 - [@Sdaswani](https://blogchain.app/id/sdaswani) highlighted a recent conversation between The Verge's Nilay Patel and Andreesen Horowitz's Chris Dixon about [whether web3 is the future of the internet](https://blogchain.app/p/is-web3-the-future-of-the-internet/zgAWEF6rFc).
-- **One for the developers:** My Capsule Social colleague [John Philip](https://blogchain.app/id/john) gave some handy tips for [documenting RESTful APIs](https://blogchain.app/p/rest-ful-api-documentation-with-open-api-specification/wCoQWTZooF).
+- **One for the developers:** My Capsule Social colleague [John Philip](https://blogchain.app/id/john) posted some handy tips for [documenting RESTful APIs](https://blogchain.app/p/rest-ful-api-documentation-with-open-api-specification/wCoQWTZooF).
 - **We launched a campaign for Blogchain** on [Product Hunt](https://www.producthunt.com/posts/blogchain), a platform for discovering new apps and services. If you're active there, please give us an upvote, review, or comment!
 
 ### News From Elsewhere
