Final copy for 24 April 2022

--- a/newsletter/2022-04-24.md
+++ b/newsletter/2022-04-24.md
@@ -1,4 +1,4 @@
-# Stream me maybe
+# Yes, comment.
 ## #Web3Weekly: April 17-23, 2022
 
 ![chat bubble](https://images.unsplash.com/photo-1577563908411-5077b6dc7624?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80)
@@ -10,19 +10,15 @@ Honestly, this historically wasn't a strength for #Web3Weekly. An email subscrib
 
 That's now changed thanks to Blogchain's well-designed comment features, which offer a great way to continue the conversation after each week's edition comes out.
 
-If you would like an invite to create a Blogchain account, just drop me an email. I'll get an access code out to you soonest.
+If you would like an invite to create a Blogchain account, just drop me an email at peter[at]capsule.social. I'll get an access code out to you soonest.
 
 Let's get to the latest headlines:
-
-**The main impetus** behind migrating production of this newsletter to Blogchain recently was philosophical consistency, a desire to "walk the walk," as the expression goes. If the content is about decentralization, it just made sense to
-<!-- Riff on comments -->
-The latest decentralization headlines:
 
 ### Blogchain Highlights
 
 - **Capsule Social** added a new [content policy and roadmap](https://blogchain.app/contentpolicy) to the platform. This was one of the priorities during our recent Amsterdam work session. With the new policy, I truly believe we've struck a good balance between our deep commitment to free speech and the need to curb truly extreme stuff in rare instances, including threats of violence, abuse of children, etc.
 
-- [Apresjosephine](https://www.apresjosephine.com/) founder **Lyneka Little** has been re-sharing some nice content from that publication, including her thoughts on **Naomi Osaka**'s possible [return to the French Open](https://blogchain.app/p/will-naomi-osaka-play-at-the-french-open/xBXAVSBnj7) and a [Q&A with drummer Pierre Mangeard](https://blogchain.app/p/a-q-a-with-drummer-pierre-mangeard/pXFJBKkzgK).
+- **Apresjosephine founder Lyneka Little** has been re-sharing some nice content from that [publication](https://www.apresjosephine.com/), including her thoughts on Naomi Osaka's possible [return to the French Open](https://blogchain.app/p/will-naomi-osaka-play-at-the-french-open/xBXAVSBnj7) and a [Q&A with drummer Pierre Mangeard](https://blogchain.app/p/a-q-a-with-drummer-pierre-mangeard/pXFJBKkzgK).
 
 - [@Tompson](https://blogchain.app/id/tompson) shared his thoughts about the [web3 movement in Japan](https://blogchain.app/p/my-view-on-web3-in-japan/ojTCCdIexh).  
 
